tests/snapshots/run_wpt_conformance__litert_greater_float16_1D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "greater.https.any.js",
    "greater float16 1D tensors",
    "litert",
    "PASS",
)
