tests/snapshots/run_wpt_conformance__litert_greater_float16_5D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "greater.https.any.js",
    "greater float16 5D tensors",
    "litert",
    "PASS",
)
