tests/snapshots/run_wpt_conformance__litert_greater_float16_broadcast_3D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "greater.https.any.js",
    "greater float16 broadcast 3D to 4D",
    "litert",
    "PASS",
)
